--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="./js/script.js" delay></script>
+	<title>Parcel Sandbox</title>
+	<meta charset="UTF-8" />
+    <script src="./src/index.js" defer></script>
 </head>
+
 <body>
-    
+	<div id="app"></div>
 </body>
+
 </html>
